# message-oriented_middleware

./: .gitignore  .gitmodules  README.md  client  client-app.cpp
middleware/: CMakeLists.txt  Dockerfile  mom.grpc.pb.cc  mom.grpc.pb.h  mom.pb.cc  mom.pb.h  mom.proto  run_app
middleware/protos/api_rest/: mom.grpc.pb.cc  mom.grpc.pb.h  mom.pb.cc  mom.pb.h  mom.proto
middleware/protos/mom_to_mom/: mom_to_mom.grpc.pb.cc  mom_to_mom.grpc.pb.h  mom_to_mom.pb.cc  mom_to_mom.pb.h  mom_to_mom.proto
middleware/src/: queue_list.cc  queue_list.h  queue_obj.cc  queue_obj.h  server.cc
middleware/src/message/: message.cc  message.h
middleware/src/mom_impl/: mom_impl.cc  mom_impl.h
middleware/src/mom_to_mom/: communication_mom_stub.cc  communication_mom_stub.h  communication_mom_to_mom.cc  communication_mom_to_mom.h
middleware/src/node/: node_impl.cc  node_impl.h
middleware/src/queue/: queue_list.cc  queue_list.h  queue_obj.cc  queue_obj.h
middleware/src/topic/: topic_list.cc  topic_list.h  topic_obj.cc  topic_obj.h
mom_comunication/: CMakeLists.txt  mom.proto
mom_comunication/.cache/clangd/index/: server.cc.29E1152C95226A8C.idx  server.cc.73F5E8F341E4F772.idx
mom_comunication/src/: server.cc
rest_API/: CMakeLists.txt  mom.cpp  run_app
rest_API/protos/rest_api/: mom.grpc.pb.cc  mom.grpc.pb.h  mom.pb.cc  mom.pb.h  mom.proto
rest_API/src/: rest_api.cc
rest_API/src/node/: node_impl.cc  node_impl.h
rest_API/src/rest_impl/: rest_impl.cc  rest_impl.h
